# cssi_evaluation

./: .gitignore  GettingStarted.md  README.md  cssi_env.yml  evaluation_metrics.py  example_workflow.ipynb  getting_started.md  model_evaluation.py  nwm_env.backup.yml  plots.py  pyproject.backup.toml  pyproject.toml  utils.py
.devcontainer/: devcontainer.json
.github/workflows/: run-unit-tests.yaml
docs/: 2023-cuahsi-sow.docx  20251017_snow_metrics.docx  2026_modeling_hackathon.md  Parflow-related-readme.md
examples/collect_observations/: ccss_swe_collect_observations.ipynb  dataCollectionHydrodata_parflow.ipynb  dataCollection_nwm.ipynb  hydrodata_collect_observations.ipynb  hydrodata_request_parflow_results.ipynb
examples/notebooks/nwm/: pixi.toml  (+1 more)
examples/nwm/: 01_data_collection.ipynb  03_watershed_scale_comparison.ipynb  NWM-Streamflow-Evaluation.ipynb  nwm_streamflow_hydrodata_huc_point_scale_evaluation.ipynb  nwm_streamflow_hydrodata_shapefile_point_scale_evaluation.ipynb  nwm_swe_point_scale_evaluation.ipynb
examples/parflow/: 02_point_scale_comparison_ParFlow.ipynb  03_watershed_scale_comparison_ParFlow.ipynb  example_subsettools_workflow.ipynb  hydrodata_request_parflow_outputs.ipynb  parflow_grid_mapping.ipynb  parflow_streamflow_point_scale_evaluation.ipynb  parflow_swe_point_scale_evaluation.ipynb  parflow_swe_point_scale_evaluation_OLD.ipynb  parflow_swe_point_scale_evaluation_copyAMY_Hydrodata_code.ipynb
examples/summa/: summa_streamflow_point_scale_evaluation.ipynb
src/cssi_evaluation/: README.md  __init__.py  evaluation_metrics.py  misc.py  model_evaluation.py  orphan_functions.py  plots.py  utils.py
tests/cssi_evaluation/: test_evaluation_metrics.py  test_evaluation_utils.py  test_model_evaluation.py  test_utils.py
utilities/: set_test_credentials.py
(+51 files in other folders)
