[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cssi_evaluation"
version = "0.0.1"
description = "Model evaluation functions for the CSSI project"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7.1",
    "numpy>=1.25.2",
    "pandas>=2.1.0",
    "shapely>=2.0.1",
    "xarray>=2023.8.0",
    "pftools>=1.3.9",
    "dask>=2022.5.1",
    "netcdf4>=1.6.4",
    "hf_hydrodata>=1.1.11",
    "subsettools>=2.0.0",
    "scikit-learn>=1.5.0"
]

[dependency-groups]
test = ["pytest"]
dev = ["black", "pylint"]