[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cssi_evaluation"
version = "0.1.6"
description = "Model evaluation functions for the CSSI project"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "dask>=2022.5.1",
    "hf_hydrodata>=1.1.11",
    "hydroeval",
    "matplotlib>=3.7.1",
    "netcdf4>=1.6.4",
    "numpy>=1.25.2",
    "pandas>=2.1.0",
    "pftools>=1.3.9",
    "planetary-computer",
    "python-dotenv",
    "requests-cache",
    "scikit-learn>=1.5.0",
    "shapely>=2.0.1",
    "subsettools>=2.0.0",
    "xarray>=2023.8.0",
]

[project.optional-dependencies]
notebooks = [
    "bokeh>=3.2.0,<3.4.0",
    "distributed",
    "hvplot==0.11.2",
    "ipywidgets",
    "jupyter-bokeh",
    "jupyterlab",
    "jupyterlab_widgets",
    "panel==1.3.1",
]

[dependency-groups]
test = ["pytest"]
dev = ["black", "pylint"]

[tool.hatch.build.targets.wheel]
packages = ["src/cssi_evaluation"]
